networkpolicy/networkpolicy__basic_kafka_setup__grafana__internet__any__ingress__ports__3000-9090__nr65__lines16.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana--internet--any--ingress--ports--3000-9090--nr65
  namespace: grafana
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 9090
    - protocol: TCP
      port: 3000
